# zhongwen_analyzer

./: .gitignore  Cargo.toml  README.md  create_tantivy_index.sh  setup_python.sh  translate.py
ckip_ws/: Cargo.toml  README.md
ckip_ws/examples/: demo.rs
ckip_ws/src/: lib.rs
src/: app.rs  lib.rs  main.rs
style/: main.scss
tantivy_index/: Cargo.toml
tantivy_index/src/: lib.rs  main.rs
