[package]
name = "chinese_tok"
version = "0.1.0"
edition = "2021"

[dependencies]
jieba-rs = { version = "0.7", features = ["tfidf", "textrank"] }
pinyin = "0.10"
serde = { version = "1.0.219", features = ["derive"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["HtmlSelectElement"] }
#yew = "0.21.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
lindera = { version = "0.40.0", features = ["cc-cedict"] }
ik-rs = "0.7.0"
wana_kana = "4.0.0"

